--- a/index.html
+++ b/index.html
@@ -236,13 +236,13 @@
 
                   <!-- Добавление хэш-тегов и комментария к изображению -->
                   <fieldset class="img-upload__text text">
-                    <input
-                      class="text__hashtags"
-                      name="hashtags"
-                      placeholder="#ХэшТег"
-                      id="hashtags"
-                    />
-                    <label class="text__wrapper" for="hashtags"></label>
+                    <label class="text__wrapper">
+                      <input
+                        class="text__hashtags"
+                        name="hashtags"
+                        placeholder="#ХэшТег"
+                      />
+                    </label>
                     <textarea
                       class="text__description"
                       name="description"
