--- a/index.html
+++ b/index.html
@@ -292,9 +292,13 @@
                 width="35"
                 height="35"
               />
-              <p class="social__caption">Тестим новую камеру! =)</p>
+              <p class="social__caption">
+                Тестим новую камеру! =)
+              </p>
               <p class="social__likes">
-                Нравится <span class="likes-count">356</span>
+                Нравится <span class="likes-count">
+                  356
+                </span>
               </p>
             </div>
 
