add effects to image

--- a/index.html
+++ b/index.html
@@ -471,7 +471,8 @@
       </div>
     </template>
 
-    <script src="./js/main.js" type="module"></script>
     <script src="./pristine/pristine.min.js"></script>
+    <script src="./nouislider/nouislider.js"></script>
+    <script src="./js/main.js" type="module"></script>
   </body>
 </html>
